# stampa

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: errors.rs  lib.rs  main.rs  middlewares.rs  models.rs  routers.rs  startup.rs  utils.rs
src/avatars/: mod.rs
src/cloud/: old.rs  service.rs
src/config/: mod.rs
src/database/: auth.rs  avatars.rs  mod.rs  projects.rs  users.rs
src/handlers/: auth.rs  avatars.rs  credentials.rs  mod.rs  projects.rs  users.rs
src/repositories/: mod.rs  users.rs
src/tests/: mod.rs
