[package]
name = "stampa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.9.0"
aws-sdk-rekognition = "0.9.0"
aws-config = "0.9.0"
aws-types = "0.9.0"

image = "0.24.1"
mongodb = "2.2.1"

rand = "0.8.5"

rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"

futures = "0.3.21"

actix-web-httpauth = "0.6.0"
actix-service = "2"
actix-utils = "3"
actix-cors = "0.6.1"
actix-web = { version = "4", default_features = false }
actix-multipart = "0.4.0"
actix-easy-multipart = "2.1.1"

base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.11"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
jsonwebtoken = "8.1.0"
chrono = "0.4.19"
bcrypt = "0.12.1"